--- a/static/css/style.css
+++ b/static/css/style.css
@@ -98,23 +98,15 @@ h1,h2,h3,h4,h5{
     text-decoration: none;
 }
 
-
-.image-flash{
-    padding: 30px;
-    display:flex;
-    flex-direction: column;
-    text-align: justify;
-    font-size: 0.9rem;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    margin: 20px 0px;
+.image-flash .post-footer  {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
 }
 
-.fa::after{
-    transition: all .1s cubic bezier(.64,-0.58,.31,1.5);
-}
+
 
 /*Footer*/
 
@@ -197,3 +189,61 @@ h1,h2,h3,h4,h5{
     padding-bottom: 1rem;
 }
 
+Template sidebar
+*/
+
+.sidebar-title {
+    margin-bottom: 1rem;
+    font-size: 1.1rem;
+}
+
+.categories li {
+    vertical-align: middle;
+}
+
+.categories li > ul {
+    padding-left: 15px;
+}
+
+.categories li > ul > li > a {
+    font-weight: 300;
+}
+
+.categories li a {
+    color: #999;
+    position: relative;
+    display: block;
+    padding: 5px 10px;
+    border-bottom: 1px solid #eee;
+}
+
+.categories li a:before {
+    content: "\f0da";
+    font-family: 'FontAwesome';
+    margin-right: 5px;
+}
+
+.categories li a:hover {
+    color: #444;
+    background-color: #f5f5f5;
+}
+
+.categories > li.active > a {
+    font-weight: 600;
+    color: #444;
+}
+
+.media-body h5 {
+    font-size: 15px;
+    letter-spacing: 0px;
+    line-height: 20px;
+    font-weight: 400;
+}
+
+.media-body h5 a {
+    color: #555;
+}
+
+.media-body h5 a:hover {
+    color: #4782d3;
+}
