--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -32,7 +32,7 @@
    <main>
       <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-logo" href="{% url 'index' %}">Hello World Blog!</a>
+          <a class="navbar-logo" href="{% url 'index' %}">Travel Leap</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
