--- a/static/css/style.css
+++ b/static/css/style.css
@@ -77,7 +77,7 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 
-h1,h2,h3,h4,h5{
+h1,h2,h3,h4,h5{/*fix*/
     font-weight: 700;
     color:#66FCF1;
 }
@@ -90,8 +90,10 @@ h1,h2,h3,h4,h5{
 .card-body{
     background-color:#0B0C10;
     color:#C5C6C7;
+    
 
 }
+
 
 .card-title {
     font-size:1.4rem;
@@ -106,8 +108,71 @@ h1,h2,h3,h4,h5{
     text-align: center;
 }
 
+/*Article Page*/
 
+.container-post {
+    padding-top: 36px;
+    background-color: #97a8bd;
+    
+}
 
+.title-post {
+    padding-top: 20px;
+    color:#bf7070;
+    font-weight: 800;
+    text-align: center;
+}
+
+.post-tag  {
+    padding-top: 15px;
+    margin-bottom: 20px
+}
+
+.post-tag li:not(:last-child) {
+    margin-right: 10px;
+}
+
+.post-tag li a {
+    color: rgb(41, 9, 9);
+    font-size: 13px;
+    text-decoration: none;
+}
+
+.post-tag li a:hover {
+    color: #dee4ec;
+    font-weight: 500;
+}
+
+.post-tag li i {
+    margin-right: 5px;
+}
+
+.post-tag li:after {
+    margin-top: -5px;
+    content: "/";
+    margin-left: 10px;
+}
+
+.post-tag li:last-child:after {
+    display: none;
+}
+
+.article-lead {
+  font-family: "Open Sans";
+  color: #ecedf1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: justify;
+  
+}
+
+p:first-of-type {
+	
+	
+}
+p:first-letter {
+   
+}
 /*Footer*/
 
 .social-links {
@@ -189,61 +254,3 @@ h1,h2,h3,h4,h5{
     padding-bottom: 1rem;
 }
 
-Template sidebar
-*/
-
-.sidebar-title {
-    margin-bottom: 1rem;
-    font-size: 1.1rem;
-}
-
-.categories li {
-    vertical-align: middle;
-}
-
-.categories li > ul {
-    padding-left: 15px;
-}
-
-.categories li > ul > li > a {
-    font-weight: 300;
-}
-
-.categories li a {
-    color: #999;
-    position: relative;
-    display: block;
-    padding: 5px 10px;
-    border-bottom: 1px solid #eee;
-}
-
-.categories li a:before {
-    content: "\f0da";
-    font-family: 'FontAwesome';
-    margin-right: 5px;
-}
-
-.categories li a:hover {
-    color: #444;
-    background-color: #f5f5f5;
-}
-
-.categories > li.active > a {
-    font-weight: 600;
-    color: #444;
-}
-
-.media-body h5 {
-    font-size: 15px;
-    letter-spacing: 0px;
-    line-height: 20px;
-    font-weight: 400;
-}
-
-.media-body h5 a {
-    color: #555;
-}
-
-.media-body h5 a:hover {
-    color: #4782d3;
-}
