--- a/world/templates/index.html
+++ b/world/templates/index.html
@@ -30,15 +30,13 @@
 
                                         <div class="image-container">
 
-                                            {% if "placeholder" in post.featured_image.url %}
+                                            {% if "placeholder" in post.header_img.url %}
 
-                                            <img class="card-img-top"
-
-                                                src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg">
+                                             <img class="card-img-top" src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg">
 
                                             {% else %}
 
-                                            <img class="card-img-top" src=" {{ post.header_img.url  }}">
+                                             <img class="card-img-top" src=" {{ post.header_img.url  }}">
 
                                             {% endif %}
 
