--- a/world/templates/index.html
+++ b/world/templates/index.html
@@ -61,11 +61,11 @@
 
                                         <p class="card-text text-muted h6">{{ post.publish_date}}</p>
 
-                                        <p class="fa fa-thumbs-o-up" aria-hidden="true">{{post.post_like }}</i></p>
+                                        <p><i class="fa fa-thumbs-o-up" aria-hidden="true">{{post.post_like }}</i></p>
                                             
 
                                     </div>
-
+                                    
                                 </div>
 
                             </div>
@@ -76,7 +76,7 @@
                     </div>
 
                 </div>
-                
+
 
 
                 {% if is_paginated %}
